# third_party_typescript

./: .gitignore  .npmignore  AGENTS.md  BUILD.gn  Gulpfile.js  Gulpfile.mjs  OAT.xml  README.OpenSource  bundle.json  compile_typescript.py  package-lock.json  package.json
.gitee/: pull_request_template.md
.github/: pull_request_template.md
.github/codeql/: codeql-configuration.yml
.github/workflows/: accept-baselines-fix-lints.yaml  ci.yml  new-release-branch.yaml  nightly.yaml  release-branch-artifact.yaml  set-version.yaml  update-lkg.yml
doc/: TypeScript Language Specification (Change Markup) - ARCHIVED.docx  TypeScript Language Specification - ARCHIVED.docx
docs/knowledge/: api-availability.md  arkts-linter.md  build-test-baseline.md  error-codes.md  ets-language-extensions.md  lib-declarations.md  oh-module-system.md  type-checker-and-compat.md
lib/: lib.es2018.intl.d.ts  lib.es5.d.ts  protocol.d.ts  tsserverlibrary.d.ts  typescript.d.ts  typescriptServices.d.ts  typingsInstaller.js
scripts/: auto-test-runner.sh  dtsBundler.mjs  ohTestCasesGenerationScript.js  processDiagnosticMessages.mjs
src/: tsconfig-base.json  tsconfig.json
src/compiler/: binder.ts  builder.ts  builderPublic.ts  builderState.ts  checker.ts  commandLineParser.ts  core.ts  corePublic.ts  debug.ts  diagnosticMessages.json  emitter.ts  expressionToTypeNode.ts  moduleNameResolver.ts  moduleSpecifiers.ts  ohApi.ts  parser.ts  path.ts  perfLogger.ts  performance.ts  performanceCore.ts  performanceDotting.ts  program.ts  resolutionCache.ts  scanner.ts  sourcemap.ts  symbolWalker.ts  sys.ts  tracing.ts  transformer.ts  tsbuildPublic.ts  tsconfig.json  types.ts  utilities.ts  utilitiesPublic.ts  visitorPublic.ts  watch.ts  watchPublic.ts  watchUtilities.ts
src/compiler/_namespaces/: ts.moduleSpecifiers.ts  ts.performance.ts  ts.ts
src/compiler/factory/: baseNodeFactory.ts  emitHelpers.ts  emitNode.ts  nodeFactory.ts  nodeTests.ts  utilities.ts  utilitiesPublic.ts
src/compiler/memorydotting/: memoryDotting.ts
src/compiler/transformers/: classFields.ts  declarations.ts  legacyDecorators.ts  ts.ts  typeSerializer.ts  utilities.ts
src/deprecatedCompat/: deprecations.ts  tsconfig.json
src/deprecatedCompat/_namespaces/: ts.ts
src/executeCommandLine/_namespaces/: ts.ts
src/harness/: client.ts  fakesHosts.ts  findUpDir.ts  fourslashImpl.ts  fourslashInterfaceImpl.ts  harnessGlobals.ts  harnessIO.ts  harnessLanguageService.ts  runnerbase.ts  sourceMapRecorder.ts  virtualFileSystemWithWatch.ts  vpathUtil.ts
src/harness/_namespaces/: FourSlash.ts  FourSlashInterface.ts  Harness.LanguageService.ts  Harness.SourceMapRecorder.ts  Harness.ts  Utils.ts  collections.ts  compiler.ts  documents.ts  evaluator.ts  fakes.ts  ts.TestFSWithWatch.ts  ts.server.ts  ts.ts  vfs.ts  vpath.ts
src/jsTyping/: jsTyping.ts
src/jsTyping/_namespaces/: ts.JsTyping.ts  ts.server.ts  ts.ts
src/lib/: es2018.intl.d.ts  es5.d.ts
src/linter/: Autofixer.ts  Common.ts  CookBookMsg.ts  DiagnosticChecker.ts  LibraryTypeCallDiagnosticChecker.ts  LinterRunner.ts  Problems.ts  TSDiagnostics.ts  TypeScriptLinter.ts  TypeScriptLinterConfig.ts  Utils.ts  linter.ts  tsconfig.json
src/linter/ArkTSLinter_1_0/: Autofixer.ts  Common.ts  CookBookMsg.ts  DiagnosticChecker.ts  LibraryTypeCallDiagnosticChecker.ts  LinterRunner.ts  Problems.ts  TSDiagnostics.ts  TypeScriptLinter.ts  TypeScriptLinterConfig.ts  Utils.ts
src/linter/ArkTSLinter_1_1/: Autofixer.ts  Common.ts  CookBookMsg.ts  DiagnosticChecker.ts  InteropTypescriptLinter.ts  LibraryTypeCallDiagnosticChecker.ts  LimitedStdApi.ts  LinterRunner.ts  Problems.ts  TSDiagnostics.ts  TypeScriptLinter.ts  TypeScriptLinterConfig.ts  Utils.ts
src/linter/Common/: ArkTSTimePrinter.ts  ArkUIDecoratorBlackList.ts
src/linter/_namespaces/: ts.ArkTSLinter_1_0.ts  ts.ArkTSLinter_1_1.ts  ts.ts
src/loggedIO/_namespaces/: Harness.ts  Playback.ts  ts.server.ts  ts.ts
src/server/: editorServices.ts  project.ts  protocol.ts  scriptVersionCache.ts  session.ts  types.ts
src/server/_namespaces/: ts.server.protocol.ts  ts.server.ts  ts.ts
src/services/: callHierarchy.ts  classifier2020.ts  completions.ts  documentHighlights.ts  documentRegistry.ts  exportInfoMap.ts  findAllReferences.ts  getEditsForFileRename.ts  goToDefinition.ts  importTracker.ts  inlayHints.ts  jsDoc.ts  navigationBar.ts  outliningElementsCollector.ts  services.ts  shims.ts  signatureHelp.ts  stringCompletions.ts  symbolDisplay.ts  textChanges.ts  transpile.ts  types.ts  utilities.ts
src/services/_namespaces/: ts.BreakpointResolver.ts  ts.CallHierarchy.ts  ts.Completions.StringCompletions.ts  ts.Completions.ts  ts.FindAllReferences.ts  ts.GoToDefinition.ts  ts.InlayHints.ts  ts.JsDoc.ts  ts.NavigateTo.ts  ts.NavigationBar.ts  ts.OrganizeImports.ts  ts.OutliningElementsCollector.ts  ts.Rename.ts  ts.SignatureHelp.ts  ts.SmartSelectionRange.ts  ts.SymbolDisplay.ts  ts.classifier.ts  ts.classifier.v2020.ts  ts.codefix.ts  ts.formatting.ts  ts.refactor.addOrRemoveBracesToArrowFunction.ts  ts.refactor.convertArrowFunctionOrFunctionExpression.ts  ts.refactor.convertParamsToDestructuredObject.ts  ts.refactor.ts  (+7 more)
src/testRunner/: compilerRunner.ts  externalCompileRunner.ts  fourslashRunner.ts  projectsRunner.ts  runner.ts  rwcRunner.ts  test262Runner.ts  tests.ts  transpileRunner.ts  tsconfig.json
src/tsserver/: nodeServer.ts  tsconfig.json  webServer.ts
src/tsserverlibrary/: tsconfig.json  tsserverlibrary.ts
src/typescript/: tsconfig.json  typescript.ts
src/typescriptServices/: tsconfig.json
src/webServer/: tsconfig.json  webServer.ts
tests/arkTSTest/: README.md  README.zh-cn.md  ignorecase.json  ignorecase.json.example  package.json  run.js  run_test.py  tsconfig.json
tests/dets/: tsconfig.json
tests/issues_cookbook_tests/: ReadMe.md  ReadMe_zh.md  autotest_sdk.py  config.json  main.py
tests/system_api_test/: README.md  system_api_test.ts
tests/ts_extra_tests/: package.json  run_ts_case.py
tests/verify_3rd_libs/: ReadMe.md  clone_all_libs.bat  local.properties  project_list.txt  verify_3rd_libs.py
(+4739 files in other folders)
